--- a/index.html
+++ b/index.html
@@ -9,14 +9,29 @@
     <title>Bingo</title>
 </head>
 <body>
-    <script src="bingo.js"></script>
+
     <div class="header">
-        <h1>Sommarbingo</h1>
+        <h1>SOMMARBINGO 2023</h1>
     </div>
     <div class="bingoFrame">
-        <p>
-            bingobongo!
-        </p>
+        <div class="bingoBox">1</div>
+        <div class="bingoBox">2</div>
+        <div class="bingoBox">3</div>
+        <div class="bingoBox">4</div>
+        <div class="bingoBox">5</div>
+        <div class="bingoBox">6</div>
+        <div class="bingoBox">7</div>
+        <div class="bingoBox">8</div>
+        <div class="bingoBox">9</div>
+        <div class="bingoBox">10</div>
+        <div class="bingoBox">11</div>
+        <div class="bingoBox">12</div>
+        <div class="bingoBox">13</div>
+        <div class="bingoBox">14</div>
+        <div class="bingoBox">15</div>
+        <div class="bingoBox">16</div>
     </div>
+
+    <script src="bingo.js"></script>
 </body>
 </html>
