new style for boxes, larger cardlist, generate text from list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="BingoStyle.css">
+    
+    <script src="bingoBrickor.js" defer></script>
+    <script src="bingo.js" defer></script>
     <title>Bingo</title>
 </head>
 <body>
@@ -32,6 +35,5 @@
         <div class="bingoBox">16</div>
     </div>
 
-    <script src="bingo.js"></script>
 </body>
 </html>
