--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>SOMMARBINGO 2023</h1>
     </div>
     <div class="bingoFrame">
+        <!-- Here there will be bingoBoxes -->
     </div>
 
 </body>
