--- a/index.html
+++ b/index.html
@@ -3,22 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="BingoStyle.css">
+    <!-- Bootstrap link -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
-    <script src="bingoBrickor.js" defer></script>
-    <script src="bingo.js" defer></script>
+    <!-- BingoStuff -->
+    <link rel="stylesheet" href="BingoStyle.css">
+
     <title>Bingo</title>
 </head>
 <body>
 
-    <div class="header">
-        <h1>SOMMARBINGO 2023</h1>
-    </div>
-    <div class="bingoFrame">
-        <!-- Here there will be bingoBoxes -->
+    <!-- Navbar -->
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Bingo</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Settings</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Svårighetsgrad</a>
+            <a class="dropdown-item" href="#">Kategorier</a>
+            <a class="dropdown-item" href="#">Tidsåtgång</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Nytt Bingo</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Information</a>
+            <div class="dropdown-menu" id="info-dropdown-menu">
+                <p class="infoBox">Det här är en sida för att generera sommarbingon! 
+                    Varje gång sidan laddar så skapas ett nytt bingo med nya rutor.
+                    Stjärnorna visar svårighetsgraden på rutan.
+                </p>
+            </div>
+        </li>
+      </ul>
+    <!-- Bingo -->
+    <div class="container-fluid">
+        <div class="header">
+            <h1>SOMMARBINGO 2023</h1>
+        </div>
+        <div class="bingoFrame">
+            <!-- Here there will be bingoBoxes -->
+        </div>
     </div>
 
+
+    <!-- Bootstrap scripts -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- My scripts -->
+    <script src="bingoBrickor.js"></script>
+    <script src="bingo.js"></script>
 </body>
 </html>
