style menus better

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link" href="#">Bingo</a>
+          <a class="nav-link"><b>Sommarbingo-sidan</b></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Inställningar</a>
@@ -50,8 +50,8 @@
                 </div>
         </div>
     </div>
-            <a class="dropdown-item" href="#">Kategorier</a>
-            <a class="dropdown-item" href="#">Tidsåtgång</a>
+            <!-- <a class="dropdown-item" href="#">Kategorier</a>
+            <a class="dropdown-item" href="#">Tidsåtgång</a> -->
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" onclick=updateSettings() >Nytt Bingo</a>
           </div>
@@ -66,7 +66,7 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link" onclick=printBingo()>Skriv ut</a>
+            <a class="nav-link" onclick=printBingo() href="#">Skriv ut</a>
           </li>
       </ul>
     <!-- Bingo -->
